--- a/ServiceDiscovery/src/main/resources/application.properties
+++ b/ServiceDiscovery/src/main/resources/application.properties
@@ -2,3 +2,6 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.instance.hostname=localhost 
 server.port=8761
+# Activer l'exportation des métriques à Prometheus
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
