--- a/Aoi-gateway/pom.xml
+++ b/Aoi-gateway/pom.xml
@@ -82,6 +82,18 @@
 			<version>4.7.3</version>
 
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+			
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
