--- a/Aoi-gateway/src/main/resources/application.properties
+++ b/Aoi-gateway/src/main/resources/application.properties
@@ -27,3 +27,7 @@ spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 eureka.instance.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 server.port=8888
+# Activer l'exportation des métriques à Prometheus
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
