--- a/BackReservation/pom.xml
+++ b/BackReservation/pom.xml
@@ -85,6 +85,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+
             <groupId>org.axonframework</groupId>
             <artifactId>axon-spring-boot-starter</artifactId>
             <version>4.7.3</version>
@@ -94,6 +95,17 @@
                     <artifactId>axon-server-connector</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+
         </dependency>
     </dependencies>
     <dependencyManagement>
