--- a/BackReservation/src/main/resources/application.properties
+++ b/BackReservation/src/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 eureka.instance.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+# Activer l'exportation des métriques à Prometheus
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
