--- a/CrudEtprix/src/main/resources/application.properties
+++ b/CrudEtprix/src/main/resources/application.properties
@@ -9,10 +9,11 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.port=9098
 Spring.application.name=voiture
-
-
 spring.cloud.discovery.enabled=true
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 eureka.instance.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+# Activer l'exportation des métriques à Prometheus
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
