--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
                                             steps {
                                                 dir('user_keycloak-master') {
                                                     sh 'mvn clean compile package'
-                                                    sh 'mvn sonar:sonar   -Dsonar.projectKey=Api-gateway -Dsonar.host.url=http://localhost:9000 -Dsonar.login=ed2e81b29f1b3f6ff5320459e72ab510fb107c1a '
+                                                    sh 'mvn sonar:sonar   -Dsonar.projectKey=devopsSecure -Dsonar.host.url=http://localhost:9000 -Dsonar.token=sqp_9d27db2dad049a555fa38e82c8f7b07fc63589a2'
                                                     sh 'docker build -t samargaichee/compteuser-1.0.0.jar .'
                                                     sh 'docker login -u samargaichee -p Samar2021'
                                                     sh 'mvn org.owasp:dependency-check-maven:check'
@@ -53,6 +53,9 @@ pipeline {
                                                                                                             }
                                                                                                            }
                                                                                                            }
+
+
+
 
 
 
